Bug 465993.  When opening a dependent window with an invisible non-chrome parent, throw.  r=jst,ere, sr=jst